--- a/templates/index.html
+++ b/templates/index.html
@@ -108,6 +108,7 @@
 
   {% include "partials/latex.html" %}
   {% include "partials/search.html" %}
+  {% include "partials/analytics.html" %}
 
   {% endblock scripts %}
 </body>
